# near-bs

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  sitelist.txt
near_bs/: closest_bs.py  enm.py  files.py  filter.py  mail.py  main.py  network_live.py  parsing.py  processing.py  ssh.py  utils.py
near_bs/enm/: fetcher.py  main.py  parser.py
near_bs/network_live/: fetcher.py  main.py  processing.py
near_bs/scripts/: csv.py  mobatch.py
