[tool.poetry]
name = "near-bs"
version = "0.1.0"
description = "identify the nearest 5G base station for each 4G base station, facilitating the establishment of an anchor point from the 4G side to ensure the seamless operation of non-standalone 5G (NSA) deployments"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "near_bs"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
oracledb = "^2.4.1"
python-dotenv = "^1.0.1"
pandas = "2.0.3"
scipy = "1.10.1"
geopy = "^2.4.1"


[tool.poetry.group.dev.dependencies]
black = "24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
